--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hbs": "^4.1.2",
     "i": "^0.3.6",
     "install": "^0.13.0",
+    "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "request": "^2.88.2"
   }
